--- a/PSS/PSS/Shared/ImportItem.razor
+++ b/PSS/PSS/Shared/ImportItem.razor
@@ -99,9 +99,9 @@
 </div>
 
 @code {
-	private ImportFile ImportFile { get; set; }
-	
 	[Parameter, EditorRequired] public int Index { get; set; }
+	
+	[Parameter, EditorRequired] public ImportFile ImportFile { get; set; }
 	
 	[Parameter, EditorRequired] public Action Rerender { get; set; }
 
