Add comments to Index and ImportFile in ImportItem

--- a/PSS/PSS/Shared/ImportItem.razor
+++ b/PSS/PSS/Shared/ImportItem.razor
@@ -99,8 +99,10 @@
 </div>
 
 @code {
+	///The index of ImportFile in Import.importFiles.
 	[Parameter, EditorRequired] public int Index { get; set; }
 	
+	///The ImportFile for this ImportItem.
 	[Parameter, EditorRequired] public ImportFile ImportFile { get; set; }
 	
 	private string datePickerDisplay = "none";
