Text inputs in Settings now have a black background and white text

--- a/PSS/PSS/Pages/Settings.razor
+++ b/PSS/PSS/Pages/Settings.razor
@@ -12,7 +12,7 @@
         </div>
 
         <div class="settings-pair">
-            <span>Where to look for items to add to your library.</span>
+            <span>Where to look for items to add to your library</span>
             <input type="text" class="settings-pair" @bind="@importFolderPath"/>
         </div>
 
