--- a/PSS/PSS/wwwroot/css/Settings.css
+++ b/PSS/PSS/wwwroot/css/Settings.css
@@ -50,6 +50,35 @@
     width: 100%;
 }
 
+#body > div > #thumbnail-settings {
+    margin-bottom: 8px;
+}
+
+#body > div > #thumbnail-settings > #thumbnail-slider {
+    display: flex;
+    flex-direction: column;
+}
+
+#body > div > #thumbnail-settings > #thumbnail-slider > input[type="range"] {
+    width: 180px;
+    margin-bottom: 7px;
+}
+
+#body > div > #thumbnail-settings > #thumbnail-updating {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+#body > div > #thumbnail-settings > #thumbnail-updating > span {
+    margin-left: 8px;
+}
+
+#body > div > #thumbnail-settings > #thumbnail-updating > progress {
+    margin-left: 2px;
+    width: 180px;
+}
+
 #body > #debugDiv > div {
     display: flex;
     align-items: center;
