Amount int variables now reset when regenerate button clicked

--- a/PSS/PSS/Pages/Settings.razor
+++ b/PSS/PSS/Pages/Settings.razor
@@ -234,6 +234,7 @@
 
     private async Task UpdateThumbnails()
     {
+        amountUpdated = amountToUpdate = 0;
         thumbnailBtnVis = "hidden";
         thumbnailProgressVis = "visible";
 
